--- a/Contact2/Contact2_style.css
+++ b/Contact2/Contact2_style.css
@@ -21,7 +21,7 @@ header p {
 header h1 {
   font-size: 40px;
   font-style: normal;
-  animation: typing 2s steps(20, end) forwards, blink 0.6s step-end infinite;
+  animation: typing 1.5s steps(20000, end) forwards, 0.3s ;
   white-space: nowrap;
   overflow: hidden;
   border-right: 3px solid #fff;
@@ -31,7 +31,7 @@ header h1 {
 header p {
   font-size: 20px;
   font-style: oblique;
-  animation: typing 3s steps(50, end) 2s forwards;
+  animation: typing 1.5s steps(20000, end) 1.5s forwards;
   white-space: nowrap;
   overflow: hidden;
   border-right: 2px solid #fff;
